--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Mustafa Arif Şişman's CV</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="http://docs.google.com/gview?url=http://github.com/arifsisman/arifsisman.github.io/raw/cv/cv.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=http://github.com/arifsisman/arifsisman.github.io/raw/cv/cv.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
